--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +50,19 @@
     "                        \"permalink\":\"/publication/\"}\n",
     "        \n",
     "    },\n",
-    "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
-    "        \"venuekey\" : \"journal\",\n",
-    "        \"venue-pretext\" : \"\",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
-    "    } \n",
+    "    # \"journal\":{\n",
+    "    #     \"file\": \"pubs.bib\",\n",
+    "    #     \"venuekey\" : \"journal\",\n",
+    "    #     \"venue-pretext\" : \"\",\n",
+    "    #     \"collection\" : {\"name\":\"publications\",\n",
+    "    #                     \"permalink\":\"/publication/\"}\n",
+    "    # } \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,18 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED jiao2024analyzing: \" Analyzing shared e-scooter trip frequency on urban road segm ... \"\n",
+      "SUCESSFULLY PARSED zhang2024situational: \" Situational-aware multi-graph convolutional recurrent networ ... \"\n",
+      "SUCESSFULLY PARSED jiao2024exploring: \" Exploring spatial heterogeneity of e-scooter’s relationship  ... \"\n",
+      "SUCESSFULLY PARSED xu2024icn: \" ICN: Interactive convolutional network for forecasting trave ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
     "    parser = bibtex.Parser()\n",
@@ -148,6 +159,9 @@
     "            \n",
     "            md += \"\"\"collection: \"\"\" +  publist[pubsource][\"collection\"][\"name\"]\n",
     "\n",
+    "            # md += \"\"\"category: manuscripts\"\"\"\n",
+    "            md += \"\"\"category: conferences\"\"\"\n",
+    "\n",
     "            md += \"\"\"\\npermalink: \"\"\" + publist[pubsource][\"collection\"][\"permalink\"]  + html_filename\n",
     "            \n",
     "            note = False\n",
@@ -201,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
