--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +50,13 @@
     "                        \"permalink\":\"/publication/\"}\n",
     "        \n",
     "    },\n",
-    "    # \"journal\":{\n",
-    "    #     \"file\": \"pubs.bib\",\n",
-    "    #     \"venuekey\" : \"journal\",\n",
-    "    #     \"venue-pretext\" : \"\",\n",
-    "    #     \"collection\" : {\"name\":\"publications\",\n",
-    "    #                     \"permalink\":\"/publication/\"}\n",
-    "    # } \n",
+    "    \"journal\":{\n",
+    "        \"file\": \"pubs.bib\",\n",
+    "        \"venuekey\" : \"journal\",\n",
+    "        \"venue-pretext\" : \"\",\n",
+    "        \"collection\" : {\"name\":\"publications\",\n",
+    "                        \"permalink\":\"/publication/\"}\n",
+    "    } \n",
     "}"
    ]
   },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -88,6 +88,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCESSFULLY PARSED wang2025impact: \" Impact of Connected and Automated Vehicles on Longitudinal a ... \"\n",
+      "SUCESSFULLY PARSED xu2025access: \" Assessing the Effects of Built Environment and Demographics  ... \"\n",
       "SUCESSFULLY PARSED jiao2024analyzing: \" Analyzing shared e-scooter trip frequency on urban road segm ... \"\n",
       "SUCESSFULLY PARSED zhang2024situational: \" Situational-aware multi-graph convolutional recurrent networ ... \"\n",
       "SUCESSFULLY PARSED jiao2024exploring: \" Exploring spatial heterogeneity of e-scooter’s relationship  ... \"\n",
@@ -159,8 +161,10 @@
     "            \n",
     "            md += \"\"\"collection: \"\"\" +  publist[pubsource][\"collection\"][\"name\"]\n",
     "\n",
-    "            # md += \"\"\"category: manuscripts\"\"\"\n",
-    "            md += \"\"\"category: conferences\"\"\"\n",
+    "            if pubsource == 'proceeding':\n",
+    "                md += \"\"\"\\ncategory: conferences\"\"\"\n",
+    "            else:\n",
+    "                md += \"\"\"\\ncategory: manuscripts\"\"\"\n",
     "\n",
     "            md += \"\"\"\\npermalink: \"\"\" + publist[pubsource][\"collection\"][\"permalink\"]  + html_filename\n",
     "            \n",
@@ -207,10 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'proceeding'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pubsource"
+   ]
   }
  ],
  "metadata": {
