--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -184,7 +184,7 @@
     "                    md += \"\\npaperurl: '\" + b[\"url\"] + \"'\"\n",
     "                    url = True\n",
     "\n",
-    "            md += \"\\ncitation: '\" + html_escape(citation) + \"'\"\n",
+    "            # md += \"\\ncitation: '\" + html_escape(citation) + \"'\"\n",
     "\n",
     "            md += \"\\n---\"\n",
     "\n",
