--- a/markdown_generator/proceedings.bib
+++ b/markdown_generator/proceedings.bib
@@ -8,8 +8,128 @@
 
 @inproceedings{xu2025access,
   title={Assessing the Effects of Built Environment and Demographics on E-Scooter and E-Bike Usage on City Streets: A Case Study of Austin, TX},
-  author={Jiao, Junfeng and Xu, Yiming},
+  author={Xu, Yiming and Jiao, Junfeng},
   booktitle={Transportation Research Board 104th Annual Meeting},
   year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2025urban,
+  title={An Urban Digital Twin Framework for Sustainable Transportation and Smart Cities: A Case Study of Austin, TX},
+  author={Xu, Yiming and Jiao, Junfeng and Wang, Huihai},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2025exploring,
+  title={Exploring Spatial Heterogeneity of E-scooter’s Relationship with Ridesourcing using Explainable Machine Learning},
+  author={Xu, Yiming and Jiao, Junfeng and Li, Yang},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2025evcrash,
+  title={How Do EV Crashes Differ from ICEV Crashes: A Comparative Study of Pennsylvania},
+  author={Xu, Ningzhe and Xu, Yiming and Liu, Jun and Jiao, Junfeng},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{wang2025street,
+  title={Street Function Representation Learning on Long-Term Traffic Flow Prediction},
+  author={Wang, Huihai and Jiao, Junfeng and Xu, Yiming},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{wang2025urban,
+  title={Urban e-scooter usage prediction based on semantic descriptions: A knowledge-driven AI},
+  author={Wang, Huihai and Davis, William and Jiao, Junfeng and Xu, Yiming},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{wang2025hierarchical,
+  title={Hierarchical Lane-Changing Gaming Decision Model for Heterogeneous Traffic on Two-Lane Highway},
+  author={Wang, Tianyi and He, Chong and Li, Hao and Li, Yixuan and Xu, Yiming and Wang, Yangyang and Jiao, Junfeng},
+  booktitle={Transportation Research Board 104th Annual Meeting},
+  year={2025},
+  address={Washington, D.C.}
+}
+
+@inproceedings{choi2024utility,
+  title={Utility or Equity? A Critical Analysis of Existing Public Electric Vehicle Charger Allocations in Austin, Texas},
+  author={Choi, Seung Jun and Xu, Yiming and Jiao, Junfeng},
+  booktitle={Association of Collegiate Schools of Planning Annual Conference},
+  year={2024},
+  address={Seattle, WA}
+}
+
+@inproceedings{jiang2024real,
+  title={Real-Time Urban Traffic Monitoring Using Transit Buses as Probes},
+  author={Jiang, Shangkun and Xu, Yiming and Wong, Wai and Zhao, Xilei},
+  booktitle={Transportation Research Board 103rd Annual Meeting},
+  year={2024},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2023icn,
+  title={ICN: Interactive Convolutional Network for forecasting travel demand of shared micromobility},
+  author={Xu, Yiming and Ke, Qian and Zhao, Xilei},
+  booktitle={Transportation Research Board 102nd Annual Meeting},
+  year={2023},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2023forecasting,
+  title={Forecasting real-time travel demand during wildfire evacuations: A situational-aware multi-graph convolutional recurrent network (SA-MGCRN) approach},
+  author={Xu, Yiming and Xiong, Ruoyang and Lovreglio, Ruggiero and Nilsson, Daniel and Zhao, Xilei},
+  booktitle={Transportation Research Board 102nd Annual Meeting},
+  year={2023},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2022realtime,
+  title={Real-time forecasting of dockless scooter-sharing demand: A context-aware spatio-temporal multi-graph convolutional network approach},
+  author={Xu, Yiming and Paliwal, Mudit and Zhao, Xilei},
+  booktitle={Transportation Research Board 101st Annual Meeting},
+  year={2022},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2022estimating,
+  title={Estimating wildfire evacuation decision and departure timing using massive GPS data},
+  author={Zhao, Xilei and Xu, Yiming and Lovreglio, Ruggiero and Kuligowski, Erica and Nilsson, Daniel and Cova, Thomas and Wu, Alex and Yan, Xiang},
+  booktitle={Transportation Research Board 101st Annual Meeting},
+  year={2022},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2021micromobility,
+  title={Micromobility trip origin and destination inference using General Bikeshare Feed Specification (GBFS) data},
+  author={Xu, Yiming and Yan, Xiang and Sisiopiku, Virginia and Merlin, Louis and Xing, Fangzhou and Zhao, Xilei},
+  booktitle={Transportation Research Board 100th Annual Meeting},
+  year={2021},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2021estimating,
+  title={Autonomous vehicles’ car-following drivability evaluation based on driving behavior spectrum reference model},
+  author={Qi, Xiao and Ni, Ying and Xu, Yiming and Tian, Ye and Wang, Jianqiang and Sun, Jian},
+  booktitle={Transportation Research Board 100th Annual Meeting},
+  year={2021},
+  address={Washington, D.C.}
+}
+
+@inproceedings{xu2019vehicle,
+  title={Vehicle cooperation around lane-changing},
+  author={Chen, Danjue and Xu, Yiming and Sun, Jian},
+  booktitle={Transportation Research Board 98th Annual Meeting},
+  year={2019},
   address={Washington, D.C.}
 }
