--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -36,3 +36,160 @@
   year={2024},
   publisher={Springer}
 }
+
+@article{jiang2024real,
+  title={Real-Time Urban Traffic Monitoring Using Transit Buses as Probes},
+  author={Jiang, Shangkun and Sun, Yuran and Wong, Wai and Xu, Yiming and Zhao, Xilei},
+  journal={Transportation Research Record},
+  pages={03611981241260708},
+  year={2024},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{zhang2024analyzing,
+  title={Analyzing spatial heterogeneity of ridesourcing usage determinants using explainable machine learning},
+  author={Zhang, Xiaojian and Zhou, Zhengze and Xu, Yiming and Zhao, Xilei},
+  journal={Journal of Transport Geography},
+  volume={114},
+  pages={103782},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{xu2023real,
+  title={Real-time forecasting of dockless scooter-sharing demand: A spatio-temporal multi-graph transformer approach},
+  author={Xu, Yiming and Zhao, Xilei and Zhang, Xiaojian and Paliwal, Mudit},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={24},
+  number={8},
+  pages={8507--8518},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{wu2022wildfire,
+  title={Wildfire evacuation decision modeling using GPS data},
+  author={Wu, Alex and Yan, Xiang and Kuligowski, Erica and Lovreglio, Ruggiero and Nilsson, Daniel and Cova, Thomas J and Xu, Yiming and Zhao, Xilei},
+  journal={International Journal of Disaster Risk Reduction},
+  volume={83},
+  pages={103373},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{xu2022micromobility,
+  title={Micromobility trip origin and destination inference using general bikeshare feed specification data},
+  author={Xu, Yiming and Yan, Xiang and Sisiopiku, Virginia P and Merlin, Louis A and Xing, Fangzhou and Zhao, Xilei},
+  journal={Transportation Research Record},
+  volume={2676},
+  number={11},
+  pages={223--238},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{xu2022highway,
+  title={A highway vehicle routing dataset during the 2019 Kincade Fire evacuation},
+  author={Xu, Yiming and Zhao, Xilei and Lovreglio, Ruggiero and Kuligowski, Erica and Nilsson, Daniel and Cova, Thomas J and Yan, Xiang},
+  journal={Scientific data},
+  volume={9},
+  number={1},
+  pages={608},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{zhao2022estimating,
+  title={Estimating wildfire evacuation decision and departure timing using large-scale GPS data},
+  author={Zhao, Xilei and Xu, Yiming and Lovreglio, Ruggiero and Kuligowski, Erica and Nilsson, Daniel and Cova, Thomas J and Wu, Alex and Yan, Xiang},
+  journal={Transportation research part D: transport and environment},
+  volume={107},
+  pages={103277},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{yan2021spatiotemporal,
+  title={A spatiotemporal analysis of e-scooters’ relationships with transit and station-based bikeshare},
+  author={Yan, Xiang and Yang, Wencui and Zhang, Xiaojian and Xu, Yiming and Bejleri, Ilir and Zhao, Xilei},
+  journal={Transportation research part D: transport and environment},
+  volume={101},
+  pages={103088},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{qi2021autonomous,
+  title={Autonomous vehicles’ car-following drivability evaluation based on driving behavior spectrum reference model},
+  author={Qi, Xiao and Ni, Ying and Xu, Yiming and Tian, Ye and Wang, Junhua and Sun, Jian},
+  journal={Transportation research record},
+  volume={2675},
+  number={7},
+  pages={129--141},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{merlin2021segment,
+  title={A segment-level model of shared, electric scooter origins and destinations},
+  author={Merlin, Louis A and Yan, Xiang and Xu, Yiming and Zhao, Xilei},
+  journal={Transportation Research Part D: Transport and Environment},
+  volume={92},
+  pages={102709},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{xu2021identifying,
+  title={Identifying key factors associated with ridesplitting adoption rate and modeling their nonlinear relationships},
+  author={Xu, Yiming and Yan, Xiang and Liu, Xinyu and Zhao, Xilei},
+  journal={Transportation Research Part A: Policy and Practice},
+  volume={144},
+  pages={170--188},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{xu2019simulation,
+  title={Simulation of turning vehicles’ behaviors at mixed-flow intersections based on potential field theory},
+  author={Xu, Yiming and Ma, Zian and Sun, Jian},
+  journal={Transportmetrica B: Transport Dynamics},
+  volume={7},
+  number={1},
+  pages={498--518},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{sun2019vehicle,
+  title={Vehicle turning behavior modeling at conflicting areas of mixed-flow intersections based on deep learning},
+  author={Sun, Jian and Qi, Xiao and Xu, Yiming and Tian, Ye},
+  journal={IEEE transactions on intelligent transportation systems},
+  volume={21},
+  number={9},
+  pages={3674--3685},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{xu2018accelerated,
+  title={Accelerated testing for automated vehicles safety evaluation in cut-in scenarios based on importance sampling, genetic algorithm and simulation applications},
+  author={Xu, Yiming and Zou, Yajie and Sun, Jian},
+  journal={Journal of intelligent and connected vehicles},
+  volume={1},
+  number={1},
+  pages={28--38},
+  year={2018},
+  publisher={TUP}
+}
+
+@article{ma2017two,
+  title={Two-dimensional simulation of turning behavior in potential conflict area of mixed-flow intersections},
+  author={Ma, Zian and Xie, Jianbo and Qi, Xiao and Xu, Yiming and Sun, Jian},
+  journal={Computer-Aided Civil and Infrastructure Engineering},
+  volume={32},
+  number={5},
+  pages={412--428},
+  year={2017},
+  publisher={Wiley Online Library}
+}
