--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "    \"proceeding\": {\n",
     "        \"file\" : \"proceedings.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
-    "        \"venue-pretext\": \"In the proceedings of \",\n",
+    "        \"venue-pretext\": \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
     "                        \"permalink\":\"/publication/\"}\n",
     "        \n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
@@ -90,10 +90,40 @@
      "text": [
       "SUCESSFULLY PARSED wang2025impact: \" Impact of Connected and Automated Vehicles on Longitudinal a ... \"\n",
       "SUCESSFULLY PARSED xu2025access: \" Assessing the Effects of Built Environment and Demographics  ... \"\n",
+      "SUCESSFULLY PARSED xu2025urban: \" An Urban Digital Twin Framework for Sustainable Transportati ... \"\n",
+      "SUCESSFULLY PARSED xu2025exploring: \" Exploring Spatial Heterogeneity of E-scooter’s Relationship  ... \"\n",
+      "SUCESSFULLY PARSED xu2025evcrash: \" How Do EV Crashes Differ from ICEV Crashes: A Comparative St ... \"\n",
+      "SUCESSFULLY PARSED wang2025street: \" Street Function Representation Learning on Long-Term Traffic ... \"\n",
+      "SUCESSFULLY PARSED wang2025urban: \" Urban e-scooter usage prediction based on semantic descripti ... \"\n",
+      "SUCESSFULLY PARSED wang2025hierarchical: \" Hierarchical Lane-Changing Gaming Decision Model for Heterog ... \"\n",
+      "SUCESSFULLY PARSED choi2024utility: \" Utility or Equity? A Critical Analysis of Existing Public El ... \"\n",
+      "SUCESSFULLY PARSED jiang2024real: \" Real-Time Urban Traffic Monitoring Using Transit Buses as Pr ... \"\n",
+      "SUCESSFULLY PARSED xu2023icn: \" ICN: Interactive Convolutional Network for forecasting trave ... \"\n",
+      "SUCESSFULLY PARSED xu2023forecasting: \" Forecasting real-time travel demand during wildfire evacuati ... \"\n",
+      "SUCESSFULLY PARSED xu2022realtime: \" Real-time forecasting of dockless scooter-sharing demand: A  ... \"\n",
+      "SUCESSFULLY PARSED xu2022estimating: \" Estimating wildfire evacuation decision and departure timing ... \"\n",
+      "SUCESSFULLY PARSED xu2021micromobility: \" Micromobility trip origin and destination inference using Ge ... \"\n",
+      "SUCESSFULLY PARSED xu2021estimating: \" Autonomous vehicles’ car-following drivability evaluation ba ... \"\n",
+      "SUCESSFULLY PARSED xu2019vehicle: \" Vehicle cooperation around lane-changing  \"\n",
       "SUCESSFULLY PARSED jiao2024analyzing: \" Analyzing shared e-scooter trip frequency on urban road segm ... \"\n",
       "SUCESSFULLY PARSED zhang2024situational: \" Situational-aware multi-graph convolutional recurrent networ ... \"\n",
       "SUCESSFULLY PARSED jiao2024exploring: \" Exploring spatial heterogeneity of e-scooter’s relationship  ... \"\n",
-      "SUCESSFULLY PARSED xu2024icn: \" ICN: Interactive convolutional network for forecasting trave ... \"\n"
+      "SUCESSFULLY PARSED xu2024icn: \" ICN: Interactive convolutional network for forecasting trave ... \"\n",
+      "SUCESSFULLY PARSED jiang2024real: \" Real-Time Urban Traffic Monitoring Using Transit Buses as Pr ... \"\n",
+      "SUCESSFULLY PARSED zhang2024analyzing: \" Analyzing spatial heterogeneity of ridesourcing usage determ ... \"\n",
+      "SUCESSFULLY PARSED xu2023real: \" Real-time forecasting of dockless scooter-sharing demand: A  ... \"\n",
+      "SUCESSFULLY PARSED wu2022wildfire: \" Wildfire evacuation decision modeling using GPS data  \"\n",
+      "SUCESSFULLY PARSED xu2022micromobility: \" Micromobility trip origin and destination inference using ge ... \"\n",
+      "SUCESSFULLY PARSED xu2022highway: \" A highway vehicle routing dataset during the 2019 Kincade Fi ... \"\n",
+      "SUCESSFULLY PARSED zhao2022estimating: \" Estimating wildfire evacuation decision and departure timing ... \"\n",
+      "SUCESSFULLY PARSED yan2021spatiotemporal: \" A spatiotemporal analysis of e-scooters’ relationships with  ... \"\n",
+      "SUCESSFULLY PARSED qi2021autonomous: \" Autonomous vehicles’ car-following drivability evaluation ba ... \"\n",
+      "SUCESSFULLY PARSED merlin2021segment: \" A segment-level model of shared, electric scooter origins an ... \"\n",
+      "SUCESSFULLY PARSED xu2021identifying: \" Identifying key factors associated with ridesplitting adopti ... \"\n",
+      "SUCESSFULLY PARSED xu2019simulation: \" Simulation of turning vehicles’ behaviors at mixed-flow inte ... \"\n",
+      "SUCESSFULLY PARSED sun2019vehicle: \" Vehicle turning behavior modeling at conflicting areas of mi ... \"\n",
+      "SUCESSFULLY PARSED xu2018accelerated: \" Accelerated testing for automated vehicles safety evaluation ... \"\n",
+      "SUCESSFULLY PARSED ma2017two: \" Two-dimensional simulation of turning behavior in potential  ... \"\n"
      ]
     }
    ],
@@ -195,7 +225,7 @@
     "\n",
     "            if url:\n",
     "                md += \"\\n[Access paper here](\" + b[\"url\"] + \"){:target=\\\"_blank\\\"}\\n\" \n",
-    "            else:\n",
+    "            elif pubsource == 'journal':\n",
     "                md += \"\\nUse [Google Scholar](https://scholar.google.com/scholar?q=\"+html.escape(clean_title.replace(\"-\",\"+\"))+\"){:target=\\\"_blank\\\"} for full citation\"\n",
     "\n",
     "            md_filename = os.path.basename(md_filename)\n",
@@ -207,26 +237,6 @@
     "        except KeyError as e:\n",
     "            print(f'WARNING Missing Expected Field {e} from entry {bib_id}: \\\"', b[\"title\"][:30],\"...\"*(len(b['title'])>30),\"\\\"\")\n",
     "            continue\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'proceeding'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pubsource"
    ]
   }
  ],
