--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -197,6 +197,8 @@
     "                md += \"\"\"\\ncategory: manuscripts\"\"\"\n",
     "\n",
     "            md += \"\"\"\\npermalink: \"\"\" + publist[pubsource][\"collection\"][\"permalink\"]  + html_filename\n",
+    "\n",
+    "            md += \"\"\"\\nexcerpt: ''\"\"\"\n",
     "            \n",
     "            note = False\n",
     "            if \"note\" in b.keys():\n",
@@ -222,6 +224,8 @@
     "            ## Markdown description for individual page\n",
     "            if note:\n",
     "                md += \"\\n\" + html_escape(b[\"note\"]) + \"\\n\"\n",
+    "\n",
+    "            md += \"\\nCitation: '\" + html_escape(citation) + \"'\\n\"\n",
     "\n",
     "            if url:\n",
     "                md += \"\\n[Access paper here](\" + b[\"url\"] + \"){:target=\\\"_blank\\\"}\\n\" \n",
