--- a/_talks/2020-TRB.md
+++ b/_talks/2020-TRB.md
@@ -1,7 +1,7 @@
 ---
 title: "Applying interpretable machine learning to identify key factors associated with neighborhood ride-splitting adoption rate and to model their nonlinear relationships"
 collection: talks
-type: "Conference proceedings talk"
+type: ""
 permalink: /talks/2020-TRB
 venue: "Transportation Research Board ABJ70 Committee Meeting"
 date: 2020-01-07
