--- a/_talks/2021-TRB.md
+++ b/_talks/2021-TRB.md
@@ -1,7 +1,7 @@
 ---
 title: "Real-time forecasting of dockless scooter-sharing demand: A spatio-temporal multi-graph convolutional network approach"
 collection: talks
-type: "Conference proceedings talk"
+type: ""
 permalink: /talks/2021-TRB
 venue: "The 2021 TRB Workshop Sponsored by AED50"
 date: 2021-01-07
