--- a/_teaching/2024f-CRP386.md
+++ b/_teaching/2024f-CRP386.md
@@ -4,6 +4,6 @@ collection: teaching
 type: "Guest Lecturer"
 permalink: /teaching/2024f-CRP386
 venue: "The University of Texas at Austin"
-date: 2024 Fall
+date: 2024-04
 location: "Austin, TX"
 ---
