--- a/_teaching/2024s-LA329.md
+++ b/_teaching/2024s-LA329.md
@@ -4,6 +4,6 @@ collection: teaching
 type: "Guest Lecturer"
 permalink: /teaching/2024s-LA329
 venue: "The University of Texas at Austin"
-date: 2024 Spring
+date: 2024-04
 location: "Austin, TX"
 ---
