--- a/_teaching/2021-CGN6905.md
+++ b/_teaching/2021-CGN6905.md
@@ -4,6 +4,6 @@ collection: teaching
 type: "Teaching Assistant"
 permalink: /teaching/2021-CGN6905
 venue: "University of Florida"
-date: 2021-09
+date: 2021-09-01
 location: "Gainesville, FL"
 ---
