--- a/_teaching/2025s-UGS302.md
+++ b/_teaching/2025s-UGS302.md
@@ -4,6 +4,6 @@ collection: teaching
 type: "Guest Lecturer"
 permalink: /teaching/2025s-UGS302
 venue: "The University of Texas at Austin"
-date: 2025-03
+date: 2025-03-05
 location: "Austin, TX"
 ---
